adds the numbers for coding agreements

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -346,7 +346,7 @@ The data collected by the web-based REST API explorer for each participant is ex
 
 
 \subsubsection{Data Analysis}
-We analyzed the data artifact qualitatively to understand the obstacles that REST API client developers face when using an API documentation that lacks usage examples. We exported a table of data from the database behind web-based REST API explorer. For each row, the table contains the following columns: API task, participant identifier, timestamp, API trial number, I1-4, response headers and body. The values for I1-4 used by the participants were manually coded to group the participant responses into categories. The categories help us determine the types of information that API client developers need in the API documentation to perform API tasks successfully. The analysis started with an empty set of codes and new codes were introduced to describe scenarios that did not fall under  codes that were already applied. The first author applied the codes on the raw data artifact and provided a coding scheme to a co-author. The co-author applied the codes to 82/539 API calls (10\% confidence interval with 95\% confidence level) made by the participants. The two authors validated the codes against each other to provide consistency.
+We analyzed the data artifact qualitatively to understand the obstacles that REST API client developers face when using an API documentation that lacks usage examples. We exported a table of data from the web-based REST API explorer. For each row, the table contains the following columns: API task, participant identifier, timestamp, API trial number, I1-4, response headers and body. The values for I1-4 used by the participants were manually coded to group the participant responses into categories. The categories help us determine the information type that API client developers need in the API documentation to perform API tasks. The analysis started with an empty set of codes and new codes were introduced to describe scenarios that did not fall under existing codes. The first author applied the codes on the raw data artifact and provided a coding scheme comprising 11 codes to a co-author. The co-author applied the codes to 82/539 API calls (10\% confidence interval with 95\% confidence level). The two authors validated the codes against each other to provide consistency. The initial coding from the co-author mismatched 4 / 11 codes for 27 / 82 API call samples, which were resolved when the coding was repeated after a discussion.
 
 For each API task attempted by each participant, we annotated the artifact with one of the following labels: successful, partially successful, and unsuccessful. Task participations are marked successful when I1-4 matches the required values for performing the given task. If a participant is able to use the correct I1-4 for one of the two tasks required to complete a single task (T2), we marked it as partially successful. Otherwise, it's marked as unsuccessful. Based on these annotations, the following formulas were used to compute the quantitative results:
 
@@ -472,10 +472,7 @@ To summarize, we recommend API developers to consider usage examples as an essen
 
 \section{Threats to Validity}
 \label{sec:threat}
-  The selection of the API, the tasks, and the participants may introduce selection bias
- that there are obstacles we don't know about that could be more severe, but were not observed because the tasks did not involve anything related to these obstacles.
-  The analysis of the raw data may introduce a bias. To reduce this, we have involved multiple researchers in the analysis process.
-
+The selection of the API, the tasks, and the participants may introduce selection bias. It is possible that there are obstacles we don't know about that could be more severe, but were not observed because the tasks did not involve anything related to these obstacles. The analysis of the raw data may introduce a bias. To reduce this, we have involved multiple researchers in the analysis process with a repeatable coding scheme.
 
 \section{Related Work}
 \label{sec:related_work}
@@ -496,7 +493,7 @@ Rama et al. presented a set of formulas for computing a measure of API usability
 Nasehi et al. performed a controlled study to understand if API unit tests can be used to provide as usage examples to facilitate API client developers \cite{5609553}. The researchers found that the examples from the unit tests helped understanding the API concepts better but it was challenging for the participants to locate relevant examples. Endrikat et al. performed a controlled study with four groups of participants to understand the impact of API documentation on APIs that are implemented using programming languages with static and dynamic type systems \cite{Endrikat:2014:ADS:2568225.2568299}. Participants were given a set of failing unit tests and were asked to make them pass by writing code using the studied API. They found that the participant group using a statically typed API with explicit documentation could get the tests to pass in less time than the other groups. Ellis et al. performed a controlled study with two groups of developers to understand the impact of using a constructor vs. a factory method design pattern on API client development time \cite{Ellis:2007:FPA:1248820.1248863}. They found that API client developers needed more time to complete API tasks using factory method compared to using a constructor. Our work in this paper is based on a controlled study and shares part of the setup that were used by the aforementioned controlled studies with the following differences: our goal is to understand the obstacles faced by API client developers without usage examples;  we focus on REST APIs instead of local APIs; and, the participants are all professional software engineers.
 
 \section{Conclusion}
-In this paper, we presented a set of problems that experienced REST API client developers face while performing API tasks using API documentation that lacks usage examples. We identified that, without examples, REST API client developers have trouble using the correct data types, correct data formats, and required HTTP headers and request body. We've also presented empirical evidence that by adding usage examples makes it possible to reduce mistakes, improve success rate and developer satisfaction of using the API. Practitioners can follow our recommendation as a set of guidelines while documenting REST APIs to improve API usability.
+In this paper, we presented a set of problems that experienced REST API client developers face while performing API tasks using API documentation that lacks usage examples. We identified that, without examples, REST API client developers have trouble using the correct data types, correct data formats, and required HTTP headers and request body. We've also presented empirical evidence that by adding usage examples makes it possible to reduce mistakes, improve success rate and developer satisfaction of using the API. REST API developers can follow our recommendation as a set of guidelines while documenting REST APIs to improve API usability. REST API documentation tool developers can leverage our findings to improve reusable tool support for software developers.
 
 \section*{Acknowledgment}
 We are grateful to our participants for their valuable time on this study. We thank the University of Calgary for funding this research.
