--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -456,7 +456,7 @@ Task T5 also required the participants to use an the ISO8601 formatted date for 
 }
 \vspace{0.5mm}
 
-\textbf{Observation 4. Use of Interdependent API Calls.} We observed the G1 participants had problem completing API tasks that require multiple API calls without usage examples. Tasks T2 and T6 required the use of multiple API calls to complete successfully. Both tasks require an initial API call to find data using the API that is needed make a second API call. For example, P1.5 mentioned the following about T6, \textit{``The post I created is not visible and not editable, though I got 201. Not sure why''}. After analyzing the response, we observed that P1.5 was able to create a blog post, but failed to publish it because it didn't have the \lstinline{publish} status. As a result, the post was not returned via the API for T6. P2.2 mentioned the following about T2: \textit{``In case of search posts by author, it's not clear how to find the author\_id. Although, I realized that users and authors are same in this case.''}
+\textbf{Observation 4. Use of Interdependent API Calls.} We observed the G1 participants had problem completing API tasks that require multiple API calls without usage examples. Tasks T2 and T6 required the use of multiple API calls to complete successfully. Both tasks require an initial API call to find data using the API that is needed make a second API call. For example, P1.5 mentioned the following about T6, \textit{``The post I created is not visible and not editable, though I got 201. Not sure why''}. After analyzing the response, we observed that P1.5 was able to create a blog post, but failed to publish it because it did not have the \lstinline{publish} status. As a result, the post was not returned via the API for T6. P2.2 mentioned the following about T2: \textit{``In case of search posts by author, it's not clear how to find the author\_id. Although, I realized that users and authors are same in this case.''}
 
 \vspace{1mm}
 \hspace{-5mm}
@@ -472,7 +472,7 @@ To summarize, we recommend API developers to consider usage examples as an essen
 
 \section{Threats to Validity}
 \label{sec:threat}
-The selection of the API, the tasks, and the participants may introduce selection bias. It is possible that there are obstacles we don't know about that could be more severe, but were not observed because the tasks did not involve anything related to these obstacles. The analysis of the raw data may introduce a bias. To reduce this, we have involved multiple researchers in the analysis process with a repeatable coding scheme.
+The selection of the API, the tasks, and the participants may introduce selection bias. It is possible that there are obstacles we do not know about that could be more severe, but were not observed because the tasks did not involve anything related to these obstacles. The analysis of the raw data may introduce a bias. To reduce this, we have involved multiple researchers in the analysis process with a repeatable coding scheme.
 
 \section{Related Work}
 \label{sec:related_work}
