--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -18,35 +18,27 @@
 \begin{document}
 \title{A Study of the Effectiveness of Usage Examples in REST API Documentation}
 
-\author{\IEEEauthorblockN{Placeholder Author Name}
-\IEEEauthorblockA{
-Placeholder Department\\
-Placeholder Affiliation\\
-Placeholder Address\\
-Placeholder Email}
-}
 
-
-% \author{\IEEEauthorblockN{S M Sohan, Frank Maurer\IEEEauthorrefmark{1}}
-% \IEEEauthorblockA{\IEEEauthorrefmark{1}
-% Dept. of Computer Science\\
-% University of Calgary\\
-% Canada\\
-% \{smsohan, frank.maurer\}@ucalgary.ca}
-% \and
-% \IEEEauthorblockN{Craig Anslow}
-% \IEEEauthorblockA{School of Eng. and Computer Science\\
-% Victoria University of Wellington\\
-% New Zealand\\
-% craig@ecs.vuw.ac.nz}
-% \and
-% \IEEEauthorblockN{Martin Robillard}
-% \IEEEauthorblockA{
-% School of Computer Science\\
-% McGill University\\
-% Canada\\
-% martin@cs.mcgill.ca}
-% }
+ \author{\IEEEauthorblockN{S M Sohan, Frank Maurer\IEEEauthorrefmark{1}}
+ \IEEEauthorblockA{\IEEEauthorrefmark{1}
+ Dept. of Computer Science\\
+ University of Calgary\\
+ Canada\\
+ \{smsohan, frank.maurer\}@ucalgary.ca}
+ \and
+ \IEEEauthorblockN{Craig Anslow}
+ \IEEEauthorblockA{School of Eng. and Computer Science\\
+ Victoria University of Wellington\\
+ New Zealand\\
+ craig@ecs.vuw.ac.nz}
+ \and
+ \IEEEauthorblockN{Martin P. Robillard}
+ \IEEEauthorblockA{
+ School of Computer Science\\
+ McGill University\\
+ Canada\\
+ martin@cs.mcgill.ca}
+ }
 
 \maketitle
 
@@ -55,6 +47,7 @@ Generating and maintaining REST API documentation with usage examples can be a t
 
 
 \end{abstract}
+
 
 
 \begin{IEEEkeywords}
@@ -368,7 +361,7 @@ For each API task attempted by each participant, we annotated the artifact with 
 
 We present a summary of the quantitative results as found by analyzing a total of 539 API calls (385 from G1, 152 from G2) made by the participants from this study in Fig. \ref{fig:comparison}. Fig. \ref{graph:productivity} juxtaposes the average number of trial API calls made by each group against their rate of success in performing the given tasks T2-T6. The average number of trial API calls and success rate for each group is computed using the aforementioned formulas.
 
-Even though it is expected that G2 would outperform G1 with an enhanced documentation, we were surprised to see the extent of the difference in effort vs. success of the two groups. In Fig. \ref{graph:productivity} and \ref{graph:time} we see that, for the simpler tasks, T2 and T3, G1 required more time and more trial API calls and reached successful answers with a lower percentage compared to G2. For T4, where the participants are required to inspect an HTTP response header, G2 executed more API calls on average, but also yielded 24\% higher success rate. For the more complex tasks T5 and T6, we see that participants in G1 had very low success rate and very high number of average API trials compared to G2. The data here confirms the intuition that without usage examples developers spend more time and execute more trial and error attempts yet have lower success rates. And the situation gets worse for relatively complicated tasks.
+Even though it is expected that G2 would outperform G1 with an enhanced documentation, we were surprised to see the extent of the difference in effort vs. success of the two groups. In Fig. \ref{graph:productivity} and \ref{graph:time} we see that, for the simpler tasks, T2 and T3, G1 required more time and more trial API calls and reached successful answers with a lower percentage compared to G2. For T4, where the participants are required to inspect an HTTP response header, G2 executed more API calls on average due to P2.7 who made 11 API calls even though reached the successful call on the 3rd attempt. For the more complex tasks T5 and T6, we see that participants in G1 had very low success rate and very high number of average API trials compared to G2. We observed a p-value of 0.0003 for the success rates using Fisher test, and p-values of 0.017  and 0.003 for the trial API calls and time spent using Wilcoxon rank sum test. The data here confirms that without usage examples developers spend more time and execute more trial attempts yet have lower success rates.
 
 \begin{figure}[h]
 \centering
@@ -472,7 +465,7 @@ To summarize, we recommend API developers to consider usage examples as an essen
 
 \section{Threats to Validity}
 \label{sec:threat}
-The selection of the API, the tasks, and the participants may introduce selection bias. It is possible that there are obstacles we do not know about that could be more severe, but were not observed because the tasks did not involve anything related to these obstacles. The analysis of the raw data may introduce a bias. To reduce this, we have involved multiple researchers in the analysis process with a repeatable coding scheme.
+The selection of the API, the tasks, and the participants may introduce selection bias. It is possible that there are obstacles we do not know about that could be more severe, but were not observed because of our task selection. The analysis of the raw data may introduce a bias. To reduce this, we have involved multiple researchers a repeatable coding scheme. A more complete API documentation without adding usage examples may provide  insights from our findings.
 
 \section{Related Work}
 \label{sec:related_work}
